# 1gh

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
crates/one-good-hour-core/: Cargo.toml
crates/one-good-hour-core/src/: app.rs  types.rs
crates/one-good-hour-tui/: Cargo.toml
crates/one-good-hour-tui/src/: event.rs  main.rs
crates/one-good-hour-tui/src/ui/: colors.rs  mod.rs  modal.rs  sections.rs
docs/: CNAME  index.html  install.sh
packaging/macos/: Info.plist  launcher.sh
src/: app.rs  event.rs  main.rs  types.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/frontend/: app.js  index.html  styles.css
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/ui/: colors.rs  gradient_bar.rs  mod.rs  modal.rs  sections.rs
